4th page z-index fix

--- a/src/sass/pages/vihodi.scss
+++ b/src/sass/pages/vihodi.scss
@@ -122,7 +122,7 @@ img.bg {
 
 
 .header__intro-text__area {
-    z-index: 10;
+    
     display: flex;
     margin-left: 0;
     flex-direction: column;
@@ -216,7 +216,7 @@ letter-spacing: 0.5;
         opacity: 1;
       }
       .header__intro-text__area {
-        z-index: 10;
+       
         display: flex;
         margin-left: 0;
         flex-direction: column;
